<resources>
    <string name="app_name">CasaDaMusica</string>
    <string name="name">Name</string>
    <string name="bottom_show">Shows</string>
    <string name="bottom_tickets">Tickets</string>
    <string name="bottom_bar">Orders</string>
    <string name="bottom_settings">Settings</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="nif">NIF</string>
    <string name="next">Next</string>
    <string name="username">Username</string>
    <string name="user_registration">Personal Data</string>
    <string name="registration">Register</string>
    <string name="credit_card">Credit</string>
    <string name="debit_card">Debit</string>
    <string name="card_number">Card number</string>
    <string name="card_number_validation">Card number validation</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="show_title">Title</string>
    <string name="show_price">Price</string>
    <string name="show_duration">Duration</string>
    <string name="show_date">Date</string>
    <string name="show_buy">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="generate">Generate</string>
    <string name="choose_number_of_tickets">Number of tickets</string>
    <string name="order">Order</string>
    <string name="vouchers">Vouchers</string>
    <string name="products">Products</string>
    <string name="tickets">Tickets</string>
    <string name="total">Total:</string>
    <string name="log_out">Log out</string>
    <string name="login">Login</string>
    <string name="you_do_not_have_an_account_yet">You do not have an account yet?</string>
    <string name="host">Host</string>
    <string name="validate_near_a_nfc_terminal">Validate Near a NFC Terminal</string>
    <string name="confirm_pin_register">Confirm pin</string>
    <string name="pin">Pin</string>
    <string name="update_password">Update Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>
</resources>
