<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bottomtab_3">
        <TextView
            android:id="@+id/update_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_password"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginBottom="13dp"
        android:hint="@string/old_password"
        android:textColorHint="#555"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:textColor="#555"
            android:textColorHint="#555"
            android:layout_height="50dp"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginBottom="13dp"
        android:textColorHint="#555"
        android:hint="@string/new_password">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:textColor="#555"
            android:textColorHint="#555"
            android:layout_height="50dp"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginBottom="13dp"
        android:textColorHint="#555"
        android:hint="@string/confirm_password">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/confirm_new_password"
            android:layout_width="match_parent"
            android:textColor="#555"
            android:layout_height="50dp"
            android:textColorHint="#555"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="15dp">

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:buttonBarButtonStyle"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:text="@string/update"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"/>


        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            style="?android:buttonBarButtonStyle"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:text="@string/cancel"
            android:layout_marginStart="10dp"
            />

    </LinearLayout>
</LinearLayout>