<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bottomtab_1">
        <TextView
            android:id="@+id/buy_ticket_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_number_of_tickets"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            />
    </LinearLayout>


    <NumberPicker
        android:id="@+id/number_of_tickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="15dp">

        <Button
            android:id="@+id/btn_generate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:buttonBarButtonStyle"
            android:textColor="@color/green"
            android:textSize="20dp"
            android:text="@string/generate"
            android:layout_marginEnd="10dp"
            />

        <Button
            android:id="@+id/btn_cancel_validation"
            android:layout_width="wrap_content"
            style="?android:buttonBarButtonStyle"
            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/cancel"
            android:layout_marginStart="10dp"
            />

    </LinearLayout>

</LinearLayout>