<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bottomtab_0">
        <TextView
            android:id="@+id/buy_ticket_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buy_ticket"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_title"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="3dp"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/show_title"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="Show Title"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_date"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="3dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/show_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="20/20/1990"
                android:layout_weight="1"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_duration"
                android:layout_marginStart="20dp"
                android:paddingRight="20dp"
                android:layout_marginEnd="3dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/show_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="20 Minutes"
                android:layout_weight="1" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_price"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="3dp"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/show_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="29€"
                />

        </TableRow>


    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <ImageButton
            android:id="@+id/minus_ticket"
            android:layout_width="40dp"
            android:layout_height="40dp"
            style="?android:buttonBarButtonStyle"
            android:layout_gravity="right"
            android:src="@drawable/ic_remove_black_24dp" />

        <TextView
            android:id="@+id/number_of_tickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:textSize="20sp"
            android:gravity="center"/>

        <ImageButton
            android:id="@+id/plus_ticket"
            style="?android:buttonBarButtonStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="left"
            android:src="@drawable/ic_add_black_24dp"

            />
    </LinearLayout>

    <TextView
        android:id="@+id/total_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="7dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="15dp">

        <Button
            android:id="@+id/buy_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:buttonBarButtonStyle"
            android:textColor="@color/green"
            android:text="@string/show_buy"
            android:textSize="20dp"
            android:layout_marginEnd="10dp"
            />

        <Button
            android:id="@+id/cancel_buy_ticket"
            android:layout_width="wrap_content"
            style="?android:buttonBarButtonStyle"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="20dp"
            android:text="@string/cancel"
            android:layout_marginStart="10dp"
            />

    </LinearLayout>


</LinearLayout>