<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bottomtab_1">
        <TextView
            android:id="@+id/update_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_information"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/name"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/name_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/password">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/confirm_password">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/confirm_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:buttonBarButtonStyle"
        android:textSize="16sp"
        android:text="@string/update_information" />

</LinearLayout>